octocat as a separate image from background

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 
+<!-- <h2>Welcome to Git Racer</h2> -->
+
 <!-- <div id="animated-example" class="animated fadeInDownBig">
   <h1>Welcome to Git Racer</h1>
 </div> -->
@@ -8,6 +10,15 @@
 <section id="content">
   <h1>Welcome to Git Racer</h1>
 </section>
+
+  <section id="octocat">
+    <img src="/images/cat2.png">
+  </section>
+
+
+
+
+
 
 <script>
 $(document).ready(function() {
