--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Muli', sans-serif;
   color: white;
-  background: url("/images/back1.jpg") no-repeat center center fixed;
+  background: url("/images/background.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -16,6 +16,48 @@ body {
 h1 {
   font-size: 4.5em;
 }
+
+section#octocat img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+h2{
+    -webkit-animation-name: pulsate;
+    -webkit-animation-duration: 3s;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-iteration-count: infinite
+}
+@-webkit-keyframes pulsate {
+    0% { width:1px;height: 1px; opacity: 0.20}
+    10% { width:3px;height: 3px; opacity: .20}
+    20% { width:5px;height: 5px; opacity: .40 }
+    30% { width:7px;height: 7px; opacity: .60 }
+    40% { width:9px;height: 9px; opacity: .80 }
+    50% { width:11px;height: 11px; opacity: 1.0}
+    60% { width:13px;height: 13px; opacity: .80}
+    70% { width:15px;height: 15px;  opacity: .60}
+    80% { width:17px;height: 17px;  opacity: .40}
+    90% { width:19px;height: 19px;  opacity: .20}
+    100% { width:21px;height: 21px;  opacity: .20}
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*h1{
   text-align: center;
