--- a/public/css/application.css
+++ b/public/css/application.css
@@ -23,26 +23,85 @@ section#octocat img {
   margin-right: auto;
 }
 
-
-h2{
-    -webkit-animation-name: pulsate;
-    -webkit-animation-duration: 3s;
-    -webkit-animation-timing-function: ease-in-out;
-    -webkit-animation-iteration-count: infinite
+section#octocat img {
+  -webkit-animation: pulse2 4s linear infinite;
+  -moz-animation: pulse2 4s linear infinite;
+  -ms-animation: pulse2 4s linear infinite;
+  animation: pulse2 4s linear infinite;
 }
-@-webkit-keyframes pulsate {
-    0% { width:1px;height: 1px; opacity: 0.20}
-    10% { width:3px;height: 3px; opacity: .20}
-    20% { width:5px;height: 5px; opacity: .40 }
-    30% { width:7px;height: 7px; opacity: .60 }
-    40% { width:9px;height: 9px; opacity: .80 }
-    50% { width:11px;height: 11px; opacity: 1.0}
-    60% { width:13px;height: 13px; opacity: .80}
-    70% { width:15px;height: 15px;  opacity: .60}
-    80% { width:17px;height: 17px;  opacity: .40}
-    90% { width:19px;height: 19px;  opacity: .20}
-    100% { width:21px;height: 21px;  opacity: .20}
+
+/*@keyframes "pulse2" {
+ 0% {
+    -webkit-transform: scale(1.0);
+    -moz-transform: scale(1.0);
+    -o-transform: scale(1.0);
+    -ms-transform: scale(1.0);
+    transform: scale(1.0);
  }
+ 50% {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+ }
+ 100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+ }*/
+
+}
+
+@-moz-keyframes pulse2 {
+ 0% {
+   -moz-transform: scale(1);
+   transform: scale(1);
+ }
+ 50% {
+   -moz-transform: scale(0.95);
+   transform: scale(0.95);
+ }
+ 100% {
+   -moz-transform: scale(1);
+   transform: scale(1);
+ }
+
+}
+
+@-webkit-keyframes "pulse2" {
+ 0% {
+   -webkit-transform: scale(1);
+   transform: scale(1);
+ }
+ 50% {
+   -webkit-transform: scale(0.95);
+   transform: scale(0.95);
+ }
+ 100% {
+   -webkit-transform: scale(1);
+   transform: scale(1);
+ }
+
+}
+
+/*@-ms-keyframes "pulse2" {
+ 0% {
+   -ms-transform: scale(1.1);
+   transform: scale(1.1);
+ }
+ 50% {
+   -ms-transform: scale(0.8);
+   transform: scale(0.8);
+ }
+ 100% {
+   -ms-transform: scale(1);
+   transform: scale(1);
+ }
+
+}*/
 
 
 
