--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Muli', sans-serif;
+  font-family: 'Contrail One', cursive;
   color: white;
   background: url("/images/background.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -7,6 +7,66 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+
+/*=========================
+       BAR FILLER
+=========================*/
+
+.barfiller {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width:100%;
+    height:12px;
+    background:#fcfcfc;
+    border:1px solid #ccc;
+    position:relative;
+    margin-bottom:20px;
+    box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,.5);
+    -moz-box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,.5);
+}
+
+.barfiller .fill {
+    display:block;
+    position:relative;
+    width:0px;
+    height:100%;
+    background:#333;
+    z-index:1;
+}
+
+.barfiller .tipWrap {
+    display:none;
+}
+
+.barfiller .tip {
+    margin-top:-30px;
+    padding:2px 4px;
+    font-size:11px;
+    color:#fff;
+    left:0px;
+    position:absolute;
+    z-index:2;
+    background: #333;
+}
+
+.barfiller .tip:after {
+    border:solid;
+    border-color:rgba(0,0,0,.8) transparent;
+    border-width:6px 6px 0 6px;
+    content:"";
+    display:block;
+    position:absolute;
+    left:9px;
+    top:100%;
+    z-index:9
+}
+
+
+
+/*====================
+        HEADING
+  ====================*/
 
 #content h1 {
   display:none;
@@ -17,111 +77,6 @@ h1 {
   font-size: 4.5em;
 }
 
-section#octocat img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-section#octocat img {
-  -webkit-animation: pulse2 4s linear infinite;
-  -moz-animation: pulse2 4s linear infinite;
-  -ms-animation: pulse2 4s linear infinite;
-  animation: pulse2 4s linear infinite;
-}
-
-/*@keyframes "pulse2" {
- 0% {
-    -webkit-transform: scale(1.0);
-    -moz-transform: scale(1.0);
-    -o-transform: scale(1.0);
-    -ms-transform: scale(1.0);
-    transform: scale(1.0);
- }
- 50% {
-    -webkit-transform: scale(0.8);
-    -moz-transform: scale(0.8);
-    -o-transform: scale(0.8);
-    -ms-transform: scale(0.8);
-    transform: scale(0.8);
- }
- 100% {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -o-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
- }*/
-
-}
-
-@-moz-keyframes pulse2 {
- 0% {
-   -moz-transform: scale(1);
-   transform: scale(1);
- }
- 50% {
-   -moz-transform: scale(0.95);
-   transform: scale(0.95);
- }
- 100% {
-   -moz-transform: scale(1);
-   transform: scale(1);
- }
-
-}
-
-@-webkit-keyframes "pulse2" {
- 0% {
-   -webkit-transform: scale(1);
-   transform: scale(1);
- }
- 50% {
-   -webkit-transform: scale(0.95);
-   transform: scale(0.95);
- }
- 100% {
-   -webkit-transform: scale(1);
-   transform: scale(1);
- }
-
-}
-
-/*@-ms-keyframes "pulse2" {
- 0% {
-   -ms-transform: scale(1.1);
-   transform: scale(1.1);
- }
- 50% {
-   -ms-transform: scale(0.8);
-   transform: scale(0.8);
- }
- 100% {
-   -ms-transform: scale(1);
-   transform: scale(1);
- }
-
-}*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*h1{
-  text-align: center;
-}
-*/
 .animated {
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
@@ -156,164 +111,94 @@ section#octocat img {
     animation-name: fadeInDownBig;
 }
 
+
+/*========================
+        MAIN IMAGE
+  ========================*/
+
+section#octocat img {
+  cursor: url("/images/cursorsuper.png"), auto;
+  width: 40%;
+  height: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section#octocat img {
+  -webkit-animation: pulse2 4s linear infinite;
+  -moz-animation: pulse2 4s linear infinite;
+  -ms-animation: pulse2 4s linear infinite;
+  animation: pulse2 4s linear infinite;
+}
+
+@-moz-keyframes pulse2 {
+ 0% {
+   -moz-transform: scale(1);
+   transform: scale(1);
+ }
+ 50% {
+   -moz-transform: scale(0.95);
+   transform: scale(0.95);
+ }
+ 100% {
+   -moz-transform: scale(1);
+   transform: scale(1);
+ }
+
+}
+
+@-webkit-keyframes "pulse2" {
+ 0% {
+   -webkit-transform: scale(1);
+   transform: scale(1);
+ }
+ 50% {
+   -webkit-transform: scale(0.95);
+   transform: scale(0.95);
+ }
+ 100% {
+   -webkit-transform: scale(1);
+   transform: scale(1);
+ }
+}
+
 /*******************
 LOGIN FORM
 *******************/
+form { max-width:420px; margin:50px auto; display: none;}
 
-.login-form {
-  width: 300px;
-  margin: 0 auto;
-  position: relative;
-
-  background: #f3f3f3;
-  border: 1px solid #fff;
-  border-radius: 5px;
-
-  box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-}
-
-/*******************
-LOGIN HEADER
-*******************/
-
-.login-form .header {
-  padding: 40px 30px 30px 30px;
-}
-
-.login-form .header h1 {
-  /*font-family: 'Bree Serif', serif;*/
-  font-weight: 300;
-  font-size: 28px;
-  line-height:34px;
-  color: #414848;
-  text-shadow: 1px 1px 0 rgba(256,256,256,1.0);
-  margin-bottom: 10px;
-}
-
-.login-form .header span {
-  font-size: 11px;
-  line-height: 16px;
-  color: #678889;
-  text-shadow: 1px 1px 0 rgba(256,256,256,1.0);
-}
-
-/*******************
-LOGIN CONTENT
-*******************/
-
-.login-form .content {
-  padding: 0 30px 25px 30px;
-}
-
-/* Input field */
-.login-form .content .input {
-  /* height: 15px; */
-  width: 188px;
-  padding: 15px 25px;
-  font-weight: 400;
-  font-size: 14px;
-  color: #9d9e9e;
-  text-shadow: 1px 1px 0 rgba(256,256,256,1.0);
-
-  background: #fff;
-  border: 1px solid #fff;
-  border-radius: 5px;
-
-  box-shadow: inset 0 1px 3px rgba(0,0,0,0.50);
-  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.50);
-  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.50);
-}
-
-/* Second input field */
-
-.user-icon {
-  width: 46px;
-  height: 47px;
-  display: block;
-  position: absolute;
-  left: 0px;
-  padding-right: 2px;
-  z-index: -1;
-
-  -moz-border-radius-topleft: 5px;
-  -moz-border-radius-bottomleft: 5px;
-  -webkit-border-top-left-radius: 5px;
-  -webkit-border-bottom-left-radius: 5px;
-}
-
-.user-icon {
-  top: 156px;
-  background: rgba(65,72,72,0.75) url(/images/pop-up-cat.png)
-  no-repeat center;
-}
-
-.content input:focus + div{
-  left: -46px;
-}
-
-/* Animation */
-.input, .user-icon, .pass-icon, .button, .register {
-  transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-}
-
-/*******************
-LOGIN FOOTER
-*******************/
-
-.login-form .footer {
-  padding: 35px 30px 40px 30px;
-  overflow: auto;
-
-  background: #d4dedf;
-  border-top: 1px solid #fff;
-
-  box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
-  -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
-  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
-}
-
-/* Login button */
-.login-form .footer .button {
-  padding: 11px 95px;
-
-  /*font-family: 'Bree Serif', serif;*/
-  font-weight: 300;
+.username_input {
+  color:white;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight:500;
   font-size: 18px;
-  color: #fff;
-  text-shadow: 0px 1px 0 rgba(0,0,0,0.25);
-
-  background: #56c2e1;
-  border: 1px solid #46b3d3;
   border-radius: 5px;
-  cursor: pointer;
-
-  box-shadow: inset 0 0 2px rgba(256,256,256,0.75);
-  -moz-box-shadow: inset 0 0 2px rgba(256,256,256,0.75);
-  -webkit-box-shadow: inset 0 0 2px rgba(256,256,256,0.75);
+  line-height: 22px;
+  background-color: transparent;
+  border:2px solid white;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width:100%;
+  box-sizing: border-box;
+  outline:0;
 }
 
-.login-form .footer .button:hover {
-  background: #3f9db8;
-  border: 1px solid rgba(256,256,256,0.75);
-
-  box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
-  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
-  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
+[type="submit"] {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  width: 100%;
+  background: white;
+  border-radius:5px;
+  border:0;
+  cursor:pointer;
+  color:grey;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
+  transition: all 0.3s;
+  margin-top:-4px;
+  font-weight:700;
 }
+[type="submit"]:hover { background:#CC4949  ; }
 
-.login-form .footer .button:focus {
-  position: relative;
-  bottom: -1px;
-
-  background: #56c2e1;
-
-  box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
-  -moz-box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
-  -webkit-box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
-}
