--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="css/application.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
-    <link href='http://fonts.googleapis.com/css?family=Muli|Ubuntu+Condensed' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Contrail+One|Fugaz+One|Russo+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
