--- a/public/css/application.css
+++ b/public/css/application.css
@@ -8,62 +8,6 @@ body {
   background-size: cover;
 }
 
-/*=========================
-       BAR FILLER
-=========================*/
-
-.barfiller {
-    display: none;
-    margin-left: auto;
-    margin-right: auto;
-    width:100%;
-    height:12px;
-    background:#fcfcfc;
-    border:1px solid #ccc;
-    position:relative;
-    margin-bottom:20px;
-    box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,.5);
-    -moz-box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,.5);
-}
-
-.barfiller .fill {
-    display:block;
-    position:relative;
-    width:0px;
-    height:100%;
-    background:#333;
-    z-index:1;
-}
-
-.barfiller .tipWrap {
-    display:none;
-}
-
-.barfiller .tip {
-    margin-top:-30px;
-    padding:2px 4px;
-    font-size:11px;
-    color:#fff;
-    left:0px;
-    position:absolute;
-    z-index:2;
-    background: #333;
-}
-
-.barfiller .tip:after {
-    border:solid;
-    border-color:rgba(0,0,0,.8) transparent;
-    border-width:6px 6px 0 6px;
-    content:"";
-    display:block;
-    position:absolute;
-    left:9px;
-    top:100%;
-    z-index:9
-}
-
-
-
 /*====================
         HEADING
   ====================*/
@@ -110,6 +54,9 @@ h1 {
     -webkit-animation-name: fadeInDownBig;
     animation-name: fadeInDownBig;
 }
+
+
+
 
 
 /*========================
@@ -163,10 +110,16 @@ section#octocat img {
  }
 }
 
+
 /*******************
-LOGIN FORM
+    LOGIN FORM
 *******************/
-form { max-width:420px; margin:50px auto; display: none;}
+form {
+  max-width:420px;
+  margin:50px auto;
+  display: none;
+  padding-top: 130px;
+}
 
 .username_input {
   color:white;
@@ -201,4 +154,63 @@ form { max-width:420px; margin:50px auto; display: none;}
   font-weight:700;
 }
 [type="submit"]:hover { background:#CC4949  ; }
+
+
+/*=========================
+       BAR FILLER
+=========================*/
+
+section.bars {
+  padding-top: 160px;
+}
+
+.barfiller {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width:100%;
+    height:12px;
+    background:#fcfcfc;
+    border:1px solid #ccc;
+    position:relative;
+    margin-bottom:20px;
+    box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,.5);
+    -moz-box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,.5);
+}
+
+.barfiller .fill {
+    display:block;
+    position:relative;
+    width:0px;
+    height:100%;
+    background:#333;
+    z-index:1;
+}
+
+.barfiller .tipWrap {
+    display:none;
+}
+
+.barfiller .tip {
+    margin-top:-30px;
+    padding:2px 4px;
+    font-size:11px;
+    color:#fff;
+    left:0px;
+    position:absolute;
+    z-index:2;
+    background: #333;
+}
+
+.barfiller .tip:after {
+    border:solid;
+    border-color:rgba(0,0,0,.8) transparent;
+    border-width:6px 6px 0 6px;
+    content:"";
+    display:block;
+    position:absolute;
+    left:9px;
+    top:100%;
+    z-index:9
+}
 
