--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,8 @@
   </head>
   <body>
     <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src="js/jquery.barfiller.js" type="text/javascript"></script>
+    <script src="js/interface.js" type="text/javascript"></script>
     <%- body %>
   </body>
 </html>
