--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,10 +5,10 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="css/application.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
-    <link href='http://fonts.googleapis.com/css?family=Contrail+One|Fugaz+One|Russo+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Contrail+One|Fugaz+One|Russo+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
     <script src="js/jquery.barfiller.js" type="text/javascript"></script>
     <script src="js/interface.js" type="text/javascript"></script>
     <%- body %>
