--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,8 +22,9 @@
 
 
 <form class="sign-in">
-  <input name="username" type="text" class="username_input" placeholder="GitHub Username..." />
+  <input id="githubUsername" name="username" type="text" class="username_input" placeholder="GitHub Username..." />
   <input id="sign-in-button" type="submit" value="RACE!!!"/>
+  <p class="error"></p>
 </form>
 
 
