validation of username works YEEEEEEEE

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 
 <form class="sign-in">
   <input id="githubUsername" name="username" type="text" class="username_input" placeholder="GitHub Username..." />
-  <input id="sign-in-button" type="submit" value="RACE!!!"/>
+  <a href='#' id="sign-in-button">RACE!!!</a>
   <p class="error"></p>
 </form>
 
