--- a/public/css/application.css
+++ b/public/css/application.css
@@ -138,7 +138,7 @@ form {
   outline:0;
 }
 
-[type="submit"] {
+a {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   width: 100%;
   background: white;
@@ -153,7 +153,7 @@ form {
   margin-top:-4px;
   font-weight:700;
 }
-[type="submit"]:hover { background:#CC4949  ; }
+a:hover { background:#CC4949  ; }
 
 
 /*=========================
