--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,14 +11,20 @@
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
     <script src="js/jquery.barfiller.js" type="text/javascript"></script>
     <script src="js/interface.js" type="text/javascript"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io();
-      $('#sign-in-button').on('click', function(){
+      var socket = io.connect('http://localhost');
+
+      $(document).ready(function() {
+      $('#sign-in-button').on('click', function(event) {
+        event.preventDefault();
         socket.emit('validate user', $('#githubUsername').val());
         $('#githubUsername').val('');
-        return false;
+        // return false;
       });
+
       socket.on('validate result', function(isUserValid){
+        console.log('is user valid ' + isUserValid)
         if (isUserValid){
           $('.sign-in').fadeOut(1500, function() {
           $('#bar1').delay(350).fadeIn();
@@ -31,6 +37,7 @@
           $('.error').html('Invalid Github Profile');
         }
       });
+    });
 
     </script> 
     <%- body %>
