working on progress bar. trying to make meaningful progress.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,30 +34,30 @@
 <section class="bars">
   <div id="bar1" class="barfiller">
         <div class="tipWrap">
-      <span class="tip"></span>
+          <span class="tip"></span>
         </div>
-        <span class="fill" data-percentage="20"></span>
-    </div>
+          <span class="fill" data-percentage="0"></span>
+  </div>
 
-    <div id="bar2" class="barfiller">
+   <!--  <div id="bar2" class="barfiller">
         <div class="tipWrap">
       <span class="tip"></span>
         </div>
-        <span class="fill" data-percentage="10"></span>
+        <span class="fill" data-percentage="0"></span>
     </div>
 
     <div id="bar3" class="barfiller">
         <div class="tipWrap">
       <span class="tip"></span>
         </div>
-        <span class="fill" data-percentage="75"></span>
+        <span class="fill" data-percentage="0"></span>
     </div>
 
     <div id="bar4" class="barfiller">
         <div class="tipWrap">
       <span class="tip"></span>
         </div>
-        <span class="fill" data-percentage="95"></span>
+        <span class="fill" data-percentage="0"></span>
     </div>
-  </div>
+  </div> -->
 </section>
