--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,16 +23,22 @@
         // return false;
       });
 
+
       socket.on('validate result', function(isUserValid){
         console.log('is user valid ' + isUserValid)
         if (isUserValid){
-          $('.sign-in').fadeOut(1500, function() {
-          $('#bar1').delay(350).fadeIn();
-          $('#bar2').delay(750).fadeIn();
-          $('#bar3').delay(1250).fadeIn();
-          $('#bar4').delay(1750).fadeIn();
-          });
-        }
+            socket.on('commits', function(commits){
+              console.log('commits: ' + commits)
+               $('.sign-in').fadeOut(1500, function() {
+                $('#bar1').delay(350).fadeIn();
+                  $('section div span').attr('data-percentage', commits);
+                    $(this).find('section div span').animate({
+                         width:$(this).attr('data-percentage')
+                          },6000);
+ 
+            });
+        });
+    }
         else {
           $('.error').html('Invalid Github Profile');
         }
