--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,13 +9,14 @@
   </head>
   <body>
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src='https://code.jquery.com/ui/1.11.2/jquery-ui.min.js'></script>
     <script src="js/jquery.barfiller.js" type="text/javascript"></script>
     <script src="js/interface.js" type="text/javascript"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io.connect('http://localhost');
 
-      $(document).ready(function() {
+    $(document).ready(function() {
       $('#sign-in-button').on('click', function(event) {
         event.preventDefault();
         socket.emit('validate user', $('#githubUsername').val());
@@ -25,25 +26,29 @@
 
 
       socket.on('validate result', function(isUserValid){
-        console.log('is user valid ' + isUserValid)
+        console.log('is user valid ' + isUserValid);
         if (isUserValid){
-            socket.on('commits', function(commits){
-              console.log('commits: ' + commits)
-               $('.sign-in').fadeOut(1500, function() {
-                $('#bar1').delay(350).fadeIn();
-                  $('section div span').attr('data-percentage', commits);
-                    $(this).find('section div span').animate({
-                         width:$(this).attr('data-percentage')
-                          },6000);
+          socket.on('commits', function(commits){
+           console.log('commits: ' + commits);
+           $('.sign-in').fadeOut(1500, function() {
+              $('#bar1').delay(350).fadeIn();
+              $('#barfiller').css({width: '0%'}).animate({
+                  width:'100%'
+                  }, {
+                       step: function(commits){
+
+                       }
+                    }  
  
-            });
-        });
-    }
-        else {
+              );
+           });
+         });
+       }   
+       else {
           $('.error').html('Invalid Github Profile');
         }
-      });
     });
+  });      
 
     </script> 
     <%- body %>
