--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,12 +32,14 @@
         BAR FILLER
      ================ -->
 <section class="bars">
-  <div id="bar1" class="barfiller">
+<!-- <div id="barfiller"></div>  -->
+<meter value="0" min="0" max="15"><br /></meter> 
+ <!--  <div id="bar1" class="barfiller">
         <div class="tipWrap">
           <span class="tip"></span>
         </div>
           <span class="fill" data-percentage="0"></span>
-  </div>
+  </div> -->
 
    <!--  <div id="bar2" class="barfiller">
         <div class="tipWrap">
