--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 
 <form class="sign-in">
   <input id="githubUsername" name="username" type="text" class="username_input" placeholder="GitHub Username..." />
-  <a href='#' id="sign-in-button">RACE!!!</a>
+  <a href='#' id="sign-in-button">Race!!!</a>
   <p class="error"></p>
 </form>
 
@@ -31,10 +31,12 @@
 <!-- ================
         BAR FILLER
      ================ -->
-<section class="bars">
-<!-- <div id="barfiller"></div>  -->
-<meter value="0" min="0" max="15"><br /></meter> 
- <!--  <div id="bar1" class="barfiller">
+<!-- <section class="bars"> -->
+<!-- <div id="barfiller"></div> -->
+<h2></h2>
+<h3> </h3>
+<meter value="0" min="0" max="25"><br /></meter>
+<!--   <div id="bar1" class="barfiller">
         <div class="tipWrap">
           <span class="tip"></span>
         </div>
@@ -61,5 +63,5 @@
         </div>
         <span class="fill" data-percentage="0"></span>
     </div>
-  </div> -->
+<!  </div> -->
 </section>
