changed cursor in loading while loading user commit page

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,4 +1,5 @@
 body {
+  cursor: default;
   font-family: 'Contrail One', cursive;
   color: white;
   background: url("/images/background.jpg") no-repeat center center fixed;
