fixed cursor loading when invalid github profile is entered

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,6 +43,8 @@
           });
        }
        else {
+          $("#sign-in-button").css("cursor", "default");
+          $("body").css("cursor", "default");
           $('.error').html('Invalid Github Profile');
         }
     });
